Añadir enlace "home" a título

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <div class="meal-search">
 
-        <h2 class="title">Find Meals For Your Ingredients</h2>
+        <a class="enlace-home" href="index.html"><h2 class="title">Find Meals For Your Ingredients</h2></a>
 
         <blockquote class="quote">Real food doesn't have ingredients,<br> real food is an ingredient.<br>
           <cite class="quote">- Jamie Oliver</cite>
