--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
       <div class="meal-search">
 
-        <a class="enlace-home" href="index.html"><h2 class="title">Find Meals For Your Ingredients</h2></a>
+        <a class="enlace-home" href="index.html">
+          <h1 class="title">Find Meals For Your Ingredients</h1>
+        </a>
 
         <blockquote class="quote">Real food doesn't have ingredients,<br> real food is an ingredient.<br>
           <cite class="quote">- Jamie Oliver</cite>
