Añadir botón UP

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="meal-search">
 
         <a class="enlace-home" href="index.html">
-          <h1 class="title">Find Meals For Your Ingredients</h1>
+          <h1 id="home" class="title">Find Meals For Your Ingredients</h1>
         </a>
 
         <blockquote class="quote">Real food doesn't have ingredients,<br> real food is an ingredient.<br>
@@ -62,7 +62,7 @@
 
   </main>
 
-
+  <footer id="footer"></footer>
 
   <script src="script.js"></script>
 
